--- a/src/components/Forms/Comment/CommentItem/CommentItem.scss
+++ b/src/components/Forms/Comment/CommentItem/CommentItem.scss
@@ -15,7 +15,26 @@
     float: left;
     margin: 5px 0;
     padding: 5px 8px;
-    max-width: 80%;
+    max-width: 60%;
+  }
+
+  .content {
+    display: flex;
+
+    &.reverse {
+      flex-direction: row-reverse;
+
+      span {
+        display: none;
+      }
+    }
+
+    span {
+      align-self: center;
+      font-size: 14px;
+      margin: 0px 5px;
+      font-style: italic;
+    }
   }
 
   &.owner {
