update: - apn not required - disable change tranasction category - multiline comment - enter to submit comment - reset password form UI - auto fill login form isssue - change start date, end date UI

--- a/src/components/Forms/LoginForm/LoginForm.scss
+++ b/src/components/Forms/LoginForm/LoginForm.scss
@@ -1,6 +1,7 @@
 @import "../../../scss/Color";
 @import "../../../scss/Border";
 @import "../../../scss/BoxShadow";
+@import "../../../scss/Animation.scss";
 
 .login-form-container {
   width: 300px;
@@ -8,6 +9,7 @@
   background-color: white;
   z-index: 2;
   padding: 0px 30px 30px 30px;
+  animation: zoom-out 300ms;
 
   img {
     height: 100px;
