--- a/src/components/Forms/Comment/Comment.scss
+++ b/src/components/Forms/Comment/Comment.scss
@@ -22,13 +22,23 @@
     border-radius: 0;
     border-top: solid 1px $primary-bg-color;
     width: 100%;
-    height: 37px;
+    height: 80px;
     display: flex;
 
     .typing {
       border-radius: 0;
       flex-grow: 1;
-      align-self: center;
+      align-self: start;
+
+      textarea {
+        width: 100%;
+        box-sizing: border-box;
+        margin: -1px 0 0 -1px;
+        padding-left: 5px;
+        border: solid 1px $primary-bg-color;
+        border-bottom-left-radius: 4px;
+        color: $primary-text-color;
+      }
     }
 
     .send-comment-button {
@@ -53,7 +63,7 @@
     height: calc(100% - 45px);
 
     .comment-history {
-      height: calc(100% - 15px - 37px);
+      height: calc(100% - 15px - 80px);
     }
   }
 }
