--- a/src/components/Forms/Comment/CommentActionForm/CommentActionForm.scss
+++ b/src/components/Forms/Comment/CommentActionForm/CommentActionForm.scss
@@ -10,12 +10,20 @@
   float: right;
 
   .edit-comment-area {
+    textarea {
+      width: 100%;
+      box-sizing: border-box;
+      margin: -1px 0 0 -1px;
+      padding-left: 5px;
+      border: solid 1px $primary-bg-color;
+      border-radius: 4px;
+      color: $primary-text-color;
+    }
   }
 
   .button-area {
     display: flex;
     justify-content: flex-end;
-    margin-top: -10px;
     gap: 5px;
   }
 }
