--- a/src/components/Forms/ForgetPassword/ForgetPassword.scss
+++ b/src/components/Forms/ForgetPassword/ForgetPassword.scss
@@ -3,7 +3,7 @@
 @import "../../../scss/BoxShadow.scss";
 
 .forgot-password {
-	width: 300px;
+	width: 340px;
   box-shadow: $default-box-shadow;
   background-color: white;
   z-index: 2;
@@ -15,5 +15,9 @@
 		color: $primary-text-color;
 		width: 100%;
 		pointer-events: none;
+	}
+
+	span {
+		color: $primary-text-color;
 	}
 }
