update: fix minor issue

--- a/src/components/DataExhibitions/TransactionList/TransactionItem/TransactionItem.scss
+++ b/src/components/DataExhibitions/TransactionList/TransactionItem/TransactionItem.scss
@@ -44,6 +44,7 @@
     color: $primary-text-color;
     border-right: dashed 1px $second-text-color;
     box-sizing: border-box;
+    overflow: auto;
   }
 
   .info-3 {
